[package]
name = "oxt-confidence-cli"
version = "0.1.1"
authors = ["stephen-cameron <git@oxt.ca>"]
edition = "2021"
description = "Calculate the confidence of a number a certain amount of sequences away"
license = "MIT"
repository = "https://github.com/oxt-ca/confidence-cli/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
oxt-confidence = "0.2.0"
